[workspace]
members = [
    ".",
    "dht-hal",
]

[package]
name = "weathergirl-rs"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1", features = ["derive"] }
embedded-hal = "0.2"
toml = "0.5"